Attempt to fix background fix scrolling on mobile

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -809,6 +809,7 @@ RESPONSIVENESS
 	}
 
 	.header, #lang-soft-edu, .contact {
-		background-image: url('/images/Chalkboard_small.jpg')
+		background-image: url('/images/Chalkboard_small.jpg');
+		/* background-attachment: fixed; */
 	}
 }
